2007-12-10  John W. Eaton  <jwe@octave.org>

	* acx_blas.m4: Use -lsunperf, not -xlic_lib=sunperf.
	From Jim Langston <Jim.Langston@Sun.COM>.

2007-12-06  John W. Eaton  <jwe@octave.org>

	* configure.in (*-*-darwin*): Only set CPICFLAG, CXXPICFLAG, and
	FPICFLAG to "" on powerpc systems.

2007-12-04  John W. Eaton  <jwe@octave.org>

	* octave-bug.in (LIBDLFCN): Delete variable and all uses.
	* Makeconf.in (LIBDLFCN, DLFCN_INCFLAGS): Likewise.
	* configure.in (DLFCN_DIR, LIBDLFCN, DLFCN_INCFLAGS): Likewise.
	Don't generate dlfcn/Makefile.
	* octMakefile.in (DISTSUBDIRS): Delete dlfcn from the list.
	(SUBDIRS): Don't substitute DLFCN_DIR here.

2007-12-03  Moritz Borgmann  <octave@moriborg.de>

	* Makeconf.in, aclocal.m4, configure.in: Check for find program,
	preferably gfind (on non-GNU systems).  Need a sane find for
	run-octave script.
	* run-octave.in: Use FIND and AWK as determined by configure.

2007-12-03  John W. Eaton  <jwe@octave.org>

	* configure.in: If available, include <sys/types.h> in test for
	sigset_t and sig_atomic_t.

2007-11-30  Moritz Borgmann  <octave@moriborg.de>

	* configure.in: Also check for sunmath.h.

2007-11-26  David Bateman  <dbateman@free.fr>

	* PROJECTS: condest now implemented.

	* NEWS: Document the TeX interpreter mode and its limitations with
	gnuplot 4.0.

	* NEWS: Document the use of "colormap gmap40" to workaround some
	gnuplot 4.0 colormap issues.

2007-11-14  John W. Eaton  <jwe@octave.org>

	* configure.in: Don't create Makefrag.bsd.

2007-11-14  Joseph P. Skudlarek  <Jskud@Jskud.com>

	* configure.in: Rework pcre.h tests to work with autoconf 2.59,
	and avoid explicit pcre/pcre.h check by using pcre-config.

2007-11-13  Joseph P. Skudlarek  <Jskud@Jskud.com>

	* octave-bug.in: Try mailx, then Mail, then /usr/ucb/mail, then
	/bin/mail.
 
2007-11-13  John W. Eaton  <jwe@octave.org>

	* configure.in: Only define HAVE_PCRE_H if <pcre.h> has the
	definitions we need.  Likewise for <pcre/pcre.h>.
